--- a/src/componentes/Navbar/Navbar.css
+++ b/src/componentes/Navbar/Navbar.css
@@ -2,24 +2,31 @@
   font-family: "Open Sans", "Montserrat", Arial, Helvetica, sans-serif;
 }
 
-nav ul {
-  padding: 6vh;
-  margin-left: 13vw;
+nav  {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  margin-left: 15%;
+  margin-top: 2.8%;
 }
 
-nav ul li {
-  display: inline;
-  margin-right: 5vw;
+.opcoes {
+  font-family: 'Open Sans', "Montserrat", Arial, Helvetica, sans;
+  list-style-type: none; 
+  padding: 0; 
+  margin: 0;
 }
 
-nav ul li .active {
-  color: #294b29;
+.opcao {
+  display: inline-block; 
+  margin-right: 10%; 
 }
 
-nav ul li a {
-  font-family: 'Montserrat';
-  font-weight: 600;
-  text-decoration: none;
-  color: #000;
-  font-size: 14px;
+.opcao p {
+  color: #000; 
+  font-size: 18px; 
+  margin: 0; 
+  padding: 5px 10px; 
 }
