ajustado o tamanho do layout da pagina

--- a/src/componentes/LandingPage/SobreNos/Sobrenos.css
+++ b/src/componentes/LandingPage/SobreNos/Sobrenos.css
@@ -22,6 +22,7 @@
 .second-landing-page {
     padding: 20% 0;
     background-color: #789461;
+    height: 880px;
   }
   
   .second-landing-page > div {
