--- a/src/componentes/LandingPage/Vantagens/Vantagens.css
+++ b/src/componentes/LandingPage/Vantagens/Vantagens.css
@@ -1,3 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+:root {
+  --verde-escuro: #294b29;
+  --verde-musgo: #50623a;
+  --verde-oliva: #789461;
+  --verde-pastel: #dbe7c9;
+  --preto: #000000;
+  --background: #fbfbfb;
+  --background-dark: #1e1e1e;
+  --card-background: #f8f8ff;
+  --card-background-stroke: #c2c2c2;
+}
+
 .container {
   max-width: 1300px;
   margin: 0 auto;
@@ -17,16 +32,20 @@
 
 .titulo {
   font-size: 2.6rem;
+  font-weight: 700;
+  color: var(--verde-escuro);
+  font-family: 'Montserrat', sans-serif;
   margin-bottom: 20px;
 }
 
 .texto {
   font-size: 1rem;
+  font-weight: 500;
   line-height: 1.6;
 }
 
 .lista {
-  margin-top: 6vh;
+  margin-top: 4vh;
   margin-bottom: 16vh;
 }
 
