--- a/src/componentes/LandingPage/Vantagens/Vantagens.css
+++ b/src/componentes/LandingPage/Vantagens/Vantagens.css
@@ -16,30 +16,32 @@
 .container {
   max-width: 1300px;
   margin: 0 auto;
-  padding: 0;
+  padding: 10px;
   margin-top: 14vh;
   display: flex;
   flex-direction: row; 
   justify-content: space-between; 
   align-items: flex-start;
-  gap: 2vw;
+  gap: 1vw;
 }
 
 .textos {
   flex: 1;
-  margin-top: 10vh;
+  margin-top: 9vh;
 }
 
 .titulo {
-  font-size: 2.6rem;
+  font-size: 2.7rem;
   font-weight: 700;
+  line-height: 1.2em;
+  letter-spacing: -1px;
   color: var(--verde-escuro);
   font-family: 'Montserrat', sans-serif;
   margin-bottom: 20px;
 }
 
 .texto {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 500;
   line-height: 1.6;
 }
@@ -57,8 +59,8 @@
 }
 
 .imagem img {
-  max-width: 100%;
+  max-width: 96%;
   height: auto;
-  margin-left: 3vw;
+  margin-left: 5vw;
   margin-bottom: 7vh;
 }
