--- a/src/componentes/LandingPage/Vantagens/Vantagens.css
+++ b/src/componentes/LandingPage/Vantagens/Vantagens.css
@@ -14,10 +14,11 @@
 }
 
 .container {
+  background-color: var(--background);
   max-width: 1300px;
   margin: 0 auto;
   padding: 10px;
-  margin-top: 14vh;
+  margin-top: 15vh;
   display: flex;
   flex-direction: row; 
   justify-content: space-between; 
@@ -62,5 +63,5 @@
   max-width: 96%;
   height: auto;
   margin-left: 5vw;
-  margin-bottom: 7vh;
+  margin-bottom: 3vh;
 }
